spacing fixed

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h2 {
 }
 
 .book-club-div {
-  margin-bottom: 4em;
+  margin-bottom: 2em;
 }
 
 .final-div {
